# IH

./: .gitignore  .gitmodules  CMakeLists.txt  README.txt
data/models/: bush.ompf  grass.ompf  palm.ompf  plane.ompf  tree.ompf
data/shaders/: terrain_directional_light.frag
data/shaders/igor/: default.vert  default_directional_light.frag  terrain_directional_light.frag  textured.vert  textured_directional_light.frag  textured_ipo.vert  textured_ipo_directional_light.frag
data/textures/skybox_day/: source.txt
src/: BossEnemy.cpp  Bullet.cpp  Enemy.cpp  EnemyDestroyed.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Granade.cpp  IslandHopper.cpp  IslandHopper.h  MuzzleFlash.cpp  MuzzleFlash.h  Plane.cpp  Plane.h  PlantMeshGenerator.cpp  Player.cpp  Player.h  StaticEnemy.cpp  TaskGenerateVoxels.cpp  TaskGenerateVoxels.h  TaskVoxelTerrain.cpp  TaskVoxelTerrain.h  Turret.cpp  VoxelBlock.cpp  VoxelBlock.h  VoxelOperation.h  VoxelOperationBox.cpp  VoxelOperationBox.h  VoxelTerrain.cpp  VoxelTerrain.h  VoxelTerrainGenerator.cpp  VoxelTerrainGenerator.h  VoxelTerrainMeshGenerator.cpp  VoxelTerrainMeshGenerator.h  main.cpp
src/game/: GameLayer.cpp  GameLayer.h  Plane.cpp  Plane.h
src/ui/: HUDLayer.cpp  HUDLayer.h
vc/: IslandHopper.sln  IslandHopper.vcxproj  IslandHopper.vcxproj.filters
vc14/: IslandHopper.sln  IslandHopper.vcxproj  IslandHopper.vcxproj.filters
